# CNN

./: README.md  get_data.py  pyproject.toml  train.py
